# redox-rfb-predictor

./: .gitignore  LICENSE  README.md  app.py  environment.yml  pyproject.toml  requirements.txt
data/: features_rdkit.parquet  features_xtb.parquet  reddb_curated.parquet  subset_for_xtb.parquet
docs/: PROJECT.zh-CN.md  REPRODUCTION.zh-CN.md  structure-assistant.md
examples/: candidates.smi  quickstart.py
models/: model_hybrid.pkl
reports/: baseline_test_preds.parquet  feature_importance_hybrid.csv  model_comparison.csv  subset_oof_preds.parquet
scripts/: 00_download_reddb.py  01_curate.py  02_featurize_rdkit.py  03_featurize_xtb.py  04_train_evaluate.py  05_make_figures.py
service/: Dockerfile  README.md  SPACE_README.md  app.py  environment.yml
src/redox_rfb/: __init__.py  predictor.py
